--- a/index.html
+++ b/index.html
@@ -9,29 +9,12 @@
   </head>
   <body>
 
-
-
     <div class="title"><h1>#Pi</h1></div>
 
-
-  <button type="button" class='btn' name="1/18">Will</button>
-  <button type="button" class='btn' name="2/18">Ian</button>
-  <button type="button" class='btn' name="3/18">Luis</button>
-  <button type="button" class='btn' name="4/18">Brent</button>
-  <button type="button" class='btn' name="5/18">Ben M.</button>
-  <button type="button" class='btn' name="6/18">Matt C.</button>
-  <button type="button" class='btn' name="7/18">Jazzy</button>
-  <button type="button" class='btn' name="8/18">Debbie</button>
-  <button type="button" class='btn' name="9/18">Ben J.</button>
-  <button type="button" class='btn' name="10/18">Lisa</button>
-  <button type="button" class='btn' name="11/18">Cody</button>
-  <button type="button" class='btn' name="12/18">John</button>
-  <button type="button" class='btn' name="13/18">Johanna</button>
-  <button type="button" class='btn' name="14/18">Matt s.</button>
-  <button type="button" class='btn' name="15/18">Nate</button>
-  <button type="button" class='btn' name="16/18">Justin</button>
-  <button type="button" class='btn' name="17/18">Ross</button>
-  <button type="button" class='btn' name="18/18">Huck</button>
+    <div id='buttons'>
+      <button id="prevButton" class="btn btn-primary"> Previous </button>
+      <button id="nextButton" class="btn btn-primary"> Next </button>
+    </div>
 
 
     <div id="outputDiv"></div>
@@ -39,3 +22,24 @@
 
   </body>
 </html>
+
+
+
+<!-- <button type="button" class='btn' name="1/18">Will</button>
+<button type="button" class='btn' name="2/18">Ian</button>
+<button type="button" class='btn' name="3/18">Luis</button>
+<button type="button" class='btn' name="4/18">Brent</button>
+<button type="button" class='btn' name="5/18">Ben M.</button>
+<button type="button" class='btn' name="6/18">Matt C.</button>
+<button type="button" class='btn' name="7/18">Jazzy</button>
+<button type="button" class='btn' name="8/18">Debbie</button>
+<button type="button" class='btn' name="9/18">Ben J.</button>
+<button type="button" class='btn' name="10/18">Lisa</button>
+<button type="button" class='btn' name="11/18">Cody</button>
+<button type="button" class='btn' name="12/18">John</button>
+<button type="button" class='btn' name="13/18">Johanna</button>
+<button type="button" class='btn' name="14/18">Matt s.</button>
+<button type="button" class='btn' name="15/18">Nate</button>
+<button type="button" class='btn' name="16/18">Justin</button>
+<button type="button" class='btn' name="17/18">Ross</button>
+<button type="button" class='btn' name="18/18">Huck</button> -->
