--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="jquery-3.1.0.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="bootstrap.min.css" media="screen" title="no title">
-    <script src="script.js"></script>
+    <script src="app.js"></script>
     <title>Weekend Challenge #2</title>
 
   </head>
